--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "mapbox-gl": "^2.8.2",
     "mongodb": "^4.7.0",
     "mongoose": "^6.4.3",
+    "prettier": "^2.7.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
+    "react-map-gl": "^7.0.17",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.2",
