--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "@types/react": "^18.0.10",
     "@types/react-dom": "^18.0.5",
     "bootstrap": "^5.1.3",
+    "html-tsx": "^1.6.0",
     "mapbox-gl": "^2.8.2",
     "mongodb": "^4.7.0",
     "mongoose": "^6.4.3",
     "prettier": "^2.7.1",
-    "react": "^18.1.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
-    "react-dom": "^18.1.0",
+    "react-dom": "^18.2.0",
     "react-map-gl": "^7.0.17",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
