--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.38",
     "@types/react": "^18.0.10",
     "@types/react-dom": "^18.0.5",
+    "axios": "^1.2.1",
     "bootstrap": "^5.1.3",
     "html-tsx": "^1.6.0",
     "mapbox-gl": "^2.8.2",
