--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.0.17",
     "react-router-dom": "^6.3.0",
