--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
-    "compilerOptions": {
-      "target": "es5",
-    },
-    "files": [],
+  "compilerOptions": {
+    "noEmit": true,
+    "esModuleInterop": true,
+    "target": "ES5"
+  },
+  "files": []
 }
